--- a/images/default/style.css
+++ b/images/default/style.css
@@ -11,7 +11,7 @@
 }
 .ourprogressgraphics {
 	width: 13px;
-	padding: 48px 0px 0px 42px;
+	padding: 48px 0px 0px 42px !important;
 	float: left;
 }
 .ourprogressmercury {
@@ -26,7 +26,7 @@
 }
 .ourprogressnumbers {
 	float: right;
-	margin: 25px 10px 0px 0px;
+	margin: 40px 10px 0px 0px;
 	font-size: 10px;
 	color: #123456;
 	text-align: right;
